@@ -5,6 +5,7 @@ Bower 0.10-unreleased
 * Document support for XDG Base Directory Specification.
 * Support tab expansion for query:.
 * Support ~NAME as a shorthand for query:NAME.
+* Support Shift-Tab to cycle through completions in reverse.
 
 Bower 0.9 (2018-10-07)
 ======================
